Bug fix widget divider not centered.

--- a/site/web/app/themes/lustrum-virgiel-xxiv/resources/assets/styles/components/_content.scss
+++ b/site/web/app/themes/lustrum-virgiel-xxiv/resources/assets/styles/components/_content.scss
@@ -6,7 +6,7 @@ body.template-lustrumevenement {
     }
 
     hr {
-      margin: 0.25rem 0 2rem;
+      margin: 0.25rem auto 2rem;
       background-color: lighten($dark-blue-bg, 20%);
       height: 2px;
     }
